--- a/moving-img.css
+++ b/moving-img.css
@@ -2,9 +2,20 @@
 .mySlides {display: none;}
 img {vertical-align: middle;}
 
+.container{
+  width:90%;
+  margin:auto;
+}
+.arrow-side{
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  margin:-350px 0px 300px 0px;
+}
+
 /* Slideshow container */
 .slideshow-container {
-  max-width: 80%;
+  max-width: 90%;
   position: relative;
   margin: auto;
 }
@@ -38,4 +49,16 @@ img {vertical-align: middle;}
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  width: auto;
+  padding: 16px;
+  font-size: 35px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  color:black
 }
