--- a/landingPageStyles.css
+++ b/landingPageStyles.css
@@ -124,7 +124,7 @@ div > input{
 .shopping-list{
     margin:auto;
     width:83%;
-    margin-bottom: 119px;
+    margin-bottom: 90px;
 }
 .shopping-list > p{
     font-size:36px;
@@ -156,7 +156,7 @@ div > input{
 .budget-zone{
     width:83.5%;
     margin: auto;
-    margin-bottom: 120px;
+    margin-bottom: 90px;
 }
 .budget-cards{
     display:grid;
@@ -219,4 +219,12 @@ div > input{
 
 #age-cat img{
     width:100%;
+}
+
+.line{
+    height:1px;
+    width: 100%;
+    background-color: black;
+    opacity: 0.1;
+    margin-top: 80px;
 }
