--- a/basket.css
+++ b/basket.css
@@ -1,78 +1,114 @@
 body{
-    width: 80%;
+    width: 85%;
     margin: auto;
 }
 #itemsInCart{
-    padding: 60px 0px 40px 0px;
-    font-size: 28px;
+    padding: 50px;
+    font-size: 35px;
 }
-
-#offer{
-    border: 1px solid #ffedde;
-    padding: 5px;
-}
-
-#offer > p{
-    color: red;
-
+.line{
+    height:1px;
+    width: 100%;
+    background-color: black;
+    opacity: 0.1;
+    margin-top: 60px;
 }
 
 #container{
-    
-    display: flex;
-    justify-content: space-around;
-    
+    display: flex;   
+}
+#container > .left{
+    width:70%;
 }
 
-table tr{
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-    border-radius: 10px;
-    padding-right: 60px;  
+#container > .right{
+    width: 30%;
 }
 
-td>img[alt = "max"]{
-    width: 50px;
-    height: 20px;
+th{
+    padding: 20px 160px 20px 0px;
+    opacity: 0.7;
 }
 
-td>img{
-    width: 150px;
-    height: 150px;
+th:nth-of-type(2){
+    padding-right: 150px;
+    padding-left: 70px;
 }
 
-#checkout{
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-    padding-top: 40px;
-    padding: 20px;    
+th:nth-of-type(3){
+    padding-right: 0px;
+    padding-left: 150px;
 }
 
-#checkout > div{
-    display: flex;
-    justify-content: space-between;
+th:nth-of-type(4){
+    padding-right: 0px;
+    padding-left: 120px;
 }
 
-p3{
-    color: green;
+th:nth-of-type(5){
+    padding-right: 0px;
+    padding-left: 150px;
 }
+ .right{
+     display: flex;
+     flex-direction: column;
+ }
+#right-top{
+    margin-left: 20px;
+    border: 1px solid rgb(226, 226, 226);
+    padding-left: 20px;
+    padding-bottom: 20px;
 
-p2,p3,p4{
-    padding: 18px;
 }
-
-#checkout>div:nth-child(2){
-    border-bottom: 1px solid grey;
-}
-
-#button{
-    background-color: #303ab2;
-    color: white;
+button{
+    font-size: 25px;
+    text-align: center;
+    padding: 20px 100px;
     margin-top: 20px;
-    padding: 15px 0px 15px 10px;
-    font-size: 22px;
-    
+    color: white;
+    background-color:  #303ab2;
+    border: none;
+    border-radius: 5px;
 }
+#right-bottom{
+    margin-top: 20px;
+    margin-left: 40px;
+    height: 200px;
+}
+input{
+    padding: 20px 100px;
+    font-size: 18.6px;
+}
+
+tr > img{
+    height:200px;
+    width: 200px;
+    margin-bottom: 10px;
+}
+
+td:nth-of-type(1){
+    font-weight: bolder; 
+    padding-left: 20px;
+    color: teal;
+}
+
+
+td:nth-of-type(2){
+    padding-right: 0px;
+    padding-left: 150px;
+}
+
+.remove{
+    margin-left: 150px;
+    position: relative;
+    top:-100;
+    background-color: #95bc5f;
+    padding:10px
+}
+
 
 #paymentWays > div{
+    width:70%;
     display: grid;
     grid-template-columns: repeat(6,1fr);
     grid-template-rows: auto;
@@ -80,5 +116,5 @@ p2,p3,p4{
 
 #paymentWays img{
     width: 100px;
-    height: 40px;
+    height: 60px;
 }
