--- a/basket.css
+++ b/basket.css
@@ -58,6 +58,8 @@ th:nth-of-type(5){
     border: 1px solid rgb(226, 226, 226);
     padding-left: 20px;
     padding-bottom: 20px;
+    padding-top: 20px;
+    font-size: 24px;
 
 }
 button{
@@ -117,4 +119,16 @@ td:nth-of-type(2){
 #paymentWays img{
     width: 100px;
     height: 60px;
+}
+
+.price-show{
+    margin-bottom: 25px;
+}
+.free{
+    color:#80d89b;
+    margin-left: 100px;
+}
+.subtotal, .sub-total{
+    float:right;
+    margin-right: 30px;
 }
