initial merging of navbar

--- a/footer.css
+++ b/footer.css
@@ -150,14 +150,14 @@
     font-size: 18px;
 }
 
-input {
+/* input {
     width: 280px;
     background-color: #f7f8f7;
     border: 1px #f7f8f7;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     padding-left: 30px;
-}
+} */
 
 
 #high {
