--- a/All Home Pages/moving-img.css
+++ b/All Home Pages/moving-img.css
@@ -30,7 +30,7 @@ img {vertical-align: middle;}
 .dot {
   height: 2px;
   width: 2%;
-  margin: 0 2px;
+  margin: -28px 2px;
   background-color:white;
   display: inline-block;
   transition: background-color 0.6s ease;
