--- a/Navbar.css
+++ b/Navbar.css
@@ -25,7 +25,7 @@
 }
 
 #Upper_nav>div:last-child{
-    margin-right: 10.4%;
+    margin-right: 9.4%;
     align-items: center;
     width:19%;
     justify-content: space-between;
@@ -106,7 +106,7 @@
     display: none;
 }
 
-.mid_li ul li:hover .Sub_menu_1{
+/* .mid_li ul li:hover .Sub_menu_1{
     display: block;
     position:absolute;
     margin-top: 10px;
@@ -132,7 +132,7 @@
     position:absolute;
     margin-top: 10px;
     margin-left: -21.3%;
-}
+} */
 
 .mid_li>ul>li>a:hover{
     color:#303ab2;
@@ -156,7 +156,7 @@
     display: flex;
     width:17%;
     align-items: center;
-    margin-left: 11%;
+    margin-left: 12.4%;
     font-size: 14px ;
     font-weight: 600;
     justify-content: space-evenly;
@@ -180,7 +180,7 @@
 #Search_img{
     padding:7px;
     font-size: 16px;
-    color:#a4a5a3;
+    color:#adabab;
 }
 
 #Search{
@@ -194,6 +194,22 @@
 #Search:focus{
     outline: none;  
 }
+
+#Offer_nav{
+    width:101.05%;
+    margin-left: -8px;
+    text-align: center;
+    margin-top: 58px;
+    background-color: #303ab2;
+    color:white;
+    border: 1px solid #303ab2;
+}
+
+#Offer_nav>h4{
+    margin: 10px auto;
+}
+
+
 
 
 
