--- a/Navbar.css
+++ b/Navbar.css
@@ -2,9 +2,9 @@
     font-family: proxima nova, sans-serif;
 }
 
-/* body img:hover{
+body img:hover{
     cursor: pointer;
-} */
+}
 
 #NAVBAR a:hover{
     color:#303ab2;
