final website clone

--- a/Navbar.css
+++ b/Navbar.css
@@ -142,6 +142,13 @@ body img:hover{
     margin-left: -21.3%;
 } */
 
+.ACTIVE{
+    display: block;
+    position:absolute;
+    margin-top: 10px;
+}
+
+
 .mid_li>ul>li>a:hover{
     color:#303ab2;
 }
